# viral-segmatch

./: .cursorignore  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  README.md  _notes  _ongoing_work.md  _roadmap.md  bundle_generator.md  conf_status.md  environment.yml  large_run_polaris.md  lit_review.md  paper_outline_v1.md  paper_outline_v2.md  polaris_plan.md  prompts.md  pyproject.toml  report.md  roadmap_v1.md  roadmap_v2.md  speed_up.md  test_plot_updates.py  tree.txt
.claude/: memory.md  settings.json
conf/: config.yaml
docs/: 2026-05-13-in_depth.md  CHANGES_DYNAMIC_PATHS.md  COMPUTE_EMBEDDINGS_ANALYSIS.md  CONFIGURATION_GUIDE.md  DUPLICATE_SEQUENCE_HANDLING.md  EMBEDDINGS_BRANCH_CHANGES.md  ESM2_EMBEDDING_SCALING.md  EXPERIMENT_CONFIGS.md  EXPERIMENT_RESULTS_ANALYSIS.md  EXPERIMENT_TRACKING.md  EXPERIMENT_TRACKING_GUIDE.md  EXP_RESULTS_STATUS.md  FIXES_APPLIED.md  LEARNING_VERIFICATION.md  PAIR_EMBEDDING_ORDERING_AND_NORM_ARTIFACT.md  PLATEAU_DIAGNOSIS_PLAN.md  PROJECT_REPORTS.md  REFACTORING_CONFIG_BUNDLE.md  SEED_SYSTEM.md  SHELL_SCRIPTS_AUDIT.md  STRATIFIED_EXPERIMENTS_PLAN.md  STRESS_TEST_VISUALS.md  allpairs_filter_sweep_runbook.md  architecture.md  architectures.md  conf_guide.md  conf_status.md  cv_run_guide.md  genome_pipeline_design.md  geo_location_analysis.md  hardware_notes.md  paper_outline.md  post_hoc_analysis_design.md  project_changelog.md
documentation/: README.md  configuration.md  installation.md  model-improvements.md  pipeline-overview.md  quick-start.md  troubleshooting.md
eda/: README.md  bunya_gto_eda.py  bunya_pssm_eda.py  datasail_lpi_measure.py  datasail_lpi_validate.py  dna_coverage_feasibility.py  dna_coverage_feasibility_sweep.py  e2e_regime.py  edge_cases_regime.py  integration_split_v2.py  probe_metadata_lookup.py  sanity_regime_counts.py
examples/: README.md  dataset_huggingface_example.py
experiments/: registry.yaml
notebooks/: Copy_of_protein_language_modeling.ipynb  bunyas.ipynb  esm-2-example.ipynb
old_scripts/: README.md
scripts/: _with_segmatch.sh  aggregate_cv_results.py  check_allpairs_status.py  classifier_bunya.sh  classifier_flu_3p_10ks_no_same_func.sh  classifier_flu_3p_1ks.sh  (+57 more)
(+561 files in other folders)
